[package]
name = "gstscream"
version = "0.6.0"
authors = ["Jacob Teplitsky"]
repository = "https://github.com/EricssonResearch/scream.git"
license = "BSD 2-clause"
edition = "2021"
description = "Rust Gstscream Scream Plugin"

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" }
gst-sys = { package = "gstreamer-sys", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" }
gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" }

once_cell = "1.0"
array-init = "0.1.1"
hashbrown="0.9.0"
lazy_static = "1.3.0"
libc = "0.2.68"
failure = "0.1"
gtypes = "0.2.0"
chrono = "0.4"
clap = { version = "4.5.11", features=["env","derive"] }

[lib]
name = "gstscream"
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name="scream_sender"
path="src/sender.rs"

[[bin]]
name="scream_receiver"
path="src/receiver.rs"

[build-dependencies]
gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git" }
cmake = "0.1.31"

[features]
screamrx-only = []
ecn-enabled = []
screamtxbw-enabled = []

default = []
